aks-files/konga-psql-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: konga
spec:
  selector:
    matchLabels:
      app: postgres
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.4
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgresdb
      volumes:
        - name: postgresdb
          persistentVolumeClaim:
            claimName: postgres-pvc
---
kind: Service
apiVersion: v1
metadata:
  name: postgres
  namespace: konga
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
  type: ClusterIP
