aks-files/konga-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konga
  namespace: konga
spec:
  selector:
    matchLabels:
      app: konga
  replicas: 1
  template:
    metadata:
      labels:
        app: konga
    spec:
      containers:
        - name: konga
          image: pantsel/konga
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 1337
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 1337
            periodSeconds: 3
            timeoutSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: konga
  name: konga-svc
  namespace: konga
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  selector:
    app: konga
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konga-ingress
  namespace: konga
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: konga-az-uat.aulapp.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: konga-svc
            port:
              number: 80
